# workshop_streamlit

./: app.py  pyproject.toml
example/: app.py
